--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -5,7 +6,7 @@
         <link rel="Stylesheet" type="text/css" href="style.css" />
         <title>Szkolenie</title>
 	</head>
-<body>
-	<h1>hello world</h1>
-</body>
+	<body>
+		<h1>hello Piotr</h1>
+	</body>
 </html
